Attempt to fix https://github.com/Koenkk/zigbee2mqtt/issues/7198

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -30,4 +30,4 @@ ARG COMMIT
 RUN echo "{\"hash\": \"$COMMIT\"}" > .hash.json
 
 ENTRYPOINT ["docker-entrypoint.sh"]
-CMD ["npm", "start"]
+CMD ["node", "index.js"]
