--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cc2531"
   ],
   "scripts": {
-    "build": "node_modules/.bin/tsc && node index.js writehash",
+    "build": "node_modules/.bin/tsc",
     "eslint": "node_modules/.bin/eslint lib/ --max-warnings=0",
     "start": "node index.js",
     "start-tsnode": "ts-node --transpile-only --project tsconfig.json index.js",
