--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "outDir": "dist",
         "baseUrl": ".",
         "allowJs": true,
+        "rootDir": "lib",
         "resolveJsonModule": true,
         "paths": {
             "*": [
