--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jest": "^24.3.6",
     "jest": "^27.0.6",
+    "source-map-support": "^0.5.19",
     "tmp": "^0.2.1",
     "typescript": "^4.3.5"
   },
