Always write hash on build. https://github.com/Koenkk/zigbee2mqtt/issues/8145

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cc2531"
   ],
   "scripts": {
-    "build": "node_modules/.bin/tsc",
+    "build": "node_modules/.bin/tsc && node index.js writehash",
     "build-watch": "node_modules/.bin/tsc --watch",
     "eslint": "node_modules/.bin/eslint lib/ --max-warnings=0",
     "start": "node index.js",
