--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,7 @@
         "allowJs": true,
         "rootDir": "lib",
         "inlineSourceMap": true,
-        "resolveJsonModule": true,
-        "paths": {
-            "*": [
-                "node_modules/*",
-                "lib/types/*"
-            ]
-        },
+        "resolveJsonModule": true
     },
     "include": [
         "lib/**/*"
