Force copy of settings.schema.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "resolveJsonModule": true
     },
     "include": [
-        "lib/**/*"
+        "lib/**/*",
+        "lib/util/settings.schema.json"
     ],
 }
