--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         "allowJs": true,
         "rootDir": "lib",
         "inlineSourceMap": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "experimentalDecorators": true
     },
     "include": [
         "lib/**/*",
