--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "homepage": "https://koenkk.github.io/zigbee2mqtt",
   "dependencies": {
     "ajv": "^8.6.2",
+    "bind-decorator": "^1.0.11",
     "debounce": "^1.2.1",
     "deep-object-diff": "^1.1.0",
     "fast-deep-equal": "^3.1.3",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-decorators": "^7.15.4",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-typescript": "^7.15.0",
     "@types/debounce": "^1.2.0",
