--- a/package.json
+++ b/package.json
@@ -66,10 +66,12 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-typescript": "^7.15.0",
     "@types/debounce": "^1.2.0",
+    "@types/finalhandler": "^1.1.1",
     "@types/humanize-duration": "^3.25.1",
     "@types/jest": "^27.0.1",
     "@types/js-yaml": "^4.0.3",
     "@types/object-assign-deep": "^0.4.0",
+    "@types/serve-static": "^1.13.10",
     "@types/ws": "^7.4.7",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
