--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/jest": "^27.0.2",
     "@types/js-yaml": "^4.0.3",
     "@types/object-assign-deep": "^0.4.0",
+    "@types/rimraf": "^3.0.2",
     "@types/serve-static": "^1.13.10",
     "@types/ws": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
