--- a/.github/workflows/update_zh.yml
+++ b/.github/workflows/update_zh.yml
@@ -21,6 +21,7 @@ jobs:
         commit-message: Update zigbee-herdsman to ${{ github.event.client_payload.version }}
         branch: "update_zh"
         title: Update zigbee-herdsman to ${{ github.event.client_payload.version }}
+    - run: sleep 5 # Otherwise pull request may not exist yet causing automerge to fail
     - uses: peter-evans/enable-pull-request-automerge@v1
       if: steps.cpr.outputs.pull-request-operation == 'created'
       with:
