--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "ajv": "^8.8.2",
     "bind-decorator": "^1.0.11",
+    "connect-gzip-static": "^2.1.1",
     "core-js": "^3.19.1",
     "debounce": "^1.2.1",
     "deep-object-diff": "^1.1.0",
@@ -52,7 +53,6 @@
     "object-assign-deep": "^0.4.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.5",
-    "serve-static": "^1.14.1",
     "source-map-support": "^0.5.21",
     "winston": "^3.3.3",
     "winston-syslog": "^2.4.4",
@@ -73,7 +73,6 @@
     "@types/js-yaml": "^4.0.5",
     "@types/object-assign-deep": "^0.4.0",
     "@types/rimraf": "^3.0.2",
-    "@types/serve-static": "^1.13.10",
     "@types/ws": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
