Fix issue template syntax

--- a/.github/ISSUE_TEMPLATE/new_device_support.yaml
+++ b/.github/ISSUE_TEMPLATE/new_device_support.yaml
@@ -1,6 +1,6 @@
 name: New device support request
 description: Request support for a new device
-title: ""
+title: "[New device support]: "
 labels: [new device support]
 body:
   - type: markdown
