--- a/.github/ISSUE_TEMPLATE/new_device_support.yaml
+++ b/.github/ISSUE_TEMPLATE/new_device_support.yaml
@@ -7,13 +7,15 @@ body:
     attributes:
       value: |
         **IMPORTANT:** Before submitting:
-        - Make sure this device is not already supported in the [latest dev branch](https://www.zigbee2mqtt.io/advanced/more/switch-to-dev-branch.html)
+        - Make sure this device is not already supported in the [dev branch](https://www.zigbee2mqtt.io/advanced/more/switch-to-dev-branch.html)
         - Follow this [guide](https://www.zigbee2mqtt.io/advanced/support-new-devices/01_support_new_devices.html)
+        - If you are using the Home Assistant addon and are still on 1.18.1, check the first point of [this](https://github.com/Koenkk/zigbee2mqtt/releases/tag/1.19.0)
   - type: input
     id: link
     attributes:
       label: Link
       description: Link of this device (product page)
+      placeholder: https://www.linktomydevice.org
     validations:
       required: true
   - type: input
@@ -29,4 +31,5 @@ body:
     attributes:
       label: Comments
       placeholder: I tried to follow the supporting new device page but got stuck at...
-
+    validations:
+      required: true
