--- a/.github/ISSUE_TEMPLATE/new_device_support.yaml
+++ b/.github/ISSUE_TEMPLATE/new_device_support.yaml
@@ -37,7 +37,7 @@ body:
     attributes:
       value: |
         # Lights
-        In case this device is a light, fill in the fields below
+        In case this device is a light, fill in the fields below:
   - type: input
     attributes:
       label: Supported color modes
@@ -46,4 +46,4 @@ body:
     attributes:
       label: Color temperature range
       description: In case this light supports color temperature, provide the color temperature range. [How to do this](https://www.zigbee2mqtt.io/advanced/support-new-devices/01_support_new_devices.html#_3-1-retrieving-color-temperature-range-only-required-for-lights-which-support-color-temperature)
-      placeholder: '{"colorTempPhysicalMin":153,"colorTempPhysicalMax":454}'
+      placeholder: '{"colorTempPhysicalMin":153,"colorTempPhysicalMax":454}'. This currently requires the latest [dev branch](https://www.zigbee2mqtt.io/advanced/more/switch-to-dev-branch.html).
