Add posibility to have local OTA index (#10141)
* Add a configuration option to override OTA index file

* Cleanup

* Code review corrections

* Move zigbee_ota_override_index_location to ota section of the configuration file

* Suport both local and remote (HTTP) OTA override index files

* Updates

* updates

Co-authored-by: Koen Kanters <koenkanters94@gmail.com>

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "rimraf": "^3.0.2",
     "semver": "^7.3.5",
     "source-map-support": "^0.5.21",
+    "uri-js": "^4.4.1",
     "winston": "^3.3.3",
     "winston-syslog": "^2.4.4",
     "ws": "^8.4.0",
