--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2-beta
+    - uses: actions/setup-node@v2
       with:
-        node-version: 14
-        registry-url: https://registry.npmjs.org/
+        node-version: 16
     - name: Get NodeJS Version
       id: nodeversion
       run: |
