--- a/.github/workflows/update_zhc.yml
+++ b/.github/workflows/update_zhc.yml
@@ -7,11 +7,11 @@ jobs:
   update_zhc:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         ref: dev
         ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
-    - uses: actions/setup-node@v2-beta
+    - uses: actions/setup-node@v3
       with:
         node-version: 16
     - run: npm install zigbee-herdsman-converters@${{ github.event.client_payload.version }} --save-exact
