--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16
+        registry-url: https://registry.npmjs.org/
     - name: Get NodeJS Version
       id: nodeversion
       run: |
