--- a/.github/workflows/update_deps.yml
+++ b/.github/workflows/update_deps.yml
@@ -15,9 +15,9 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16
-    - run: rm -rf package-lock.json
+    - run: rm -rf npm-shrinkwrap.json
     - run: npx npm-check-updates -u
-    - run: npm install
+    - run: npm install && npm shrinkwrap --dev
     - uses: peter-evans/create-pull-request@v3
       with:
         commit-message: Update dependencies
