--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "ajv": "^8.11.0",
     "bind-decorator": "^1.0.11",
-    "connect-gzip-static": "^3.0.0",
+    "connect-gzip-static": "2.1.1",
     "core-js": "^3.22.5",
     "debounce": "^1.2.1",
     "deep-object-diff": "^1.1.7",
