--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node: [12, 14, 15, 16, 17]
+        node: [14, 16, 17, 18]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
