--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node: [14, 16, 17, 18]
+        exclude:
+          - os: windows-latest
+            node: 17
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
