--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node: [14, 16, 17, 18]
         exclude:
-          - os: windows-latest
+          - os: windows-latest # https://github.com/serialport/node-serialport/issues/2344
             node: 17
     runs-on: ${{ matrix.os }}
     steps:
