--- a/.github/workflows/ghcr_delete_untagged.yml
+++ b/.github/workflows/ghcr_delete_untagged.yml
@@ -24,6 +24,6 @@ jobs:
                 }
             }
         env:
-          OWNER: koenkk
+          OWNER: koenkk/zigbee2mqtt
           PACKAGE_NAME: zigbee2mqtt
           PER_PAGE: 2
