--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,9 +89,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node: [14, 16, 17, 18]
-        # exclude:
-        #   - os: windows-latest # https://github.com/serialport/node-serialport/issues/2344
-        #     node: 17
+        exclude:
+          - os: windows-latest # https://github.com/serialport/node-serialport/issues/2344
+            node: 17
     runs-on: ${{ matrix.os }}
     continue-on-error: true
     steps:
