--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,12 +3,10 @@ FROM node:16-alpine3.15 as base
 WORKDIR /app
 RUN apk add --no-cache tzdata eudev tini
 
-COPY package.json ./
-
 # Dependencies and build
 FROM base as dependencies_and_build
 
-COPY npm-shrinkwrap.json tsconfig.json index.js ./
+COPY package*.json tsconfig.json index.js ./
 COPY lib ./lib
 
 RUN apk add --no-cache --virtual .buildtools make gcc g++ python3 linux-headers git && \
@@ -20,7 +18,7 @@ FROM base as release
 
 COPY --from=dependencies_and_build /app/node_modules ./node_modules
 COPY dist ./dist
-COPY LICENSE index.js data/configuration.yaml ./
+COPY package.json LICENSE index.js data/configuration.yaml ./
 
 COPY docker/docker-entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh
