--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node: [14, 16, 17, 18]
+        node: [18] # 14, 16, 17, 
         exclude:
           - os: windows-latest # https://github.com/serialport/node-serialport/issues/2344
             node: 17
@@ -85,14 +85,19 @@ jobs:
     continue-on-error: true
     steps:
       - uses: actions/checkout@v3
+      - name: Cache node-gyp
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/node-gyp/
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
           registry-url: https://registry.npmjs.org/
-          cache: 'npm'
-      - run: npm config set --global devdir $(npm config get cache)         
+          cache: 'npm'               
       - name: Install dependencies
         run: npm ci
+      - run: ls -lah ~/.cache
       - name: Lint
         run: npm run eslint
       - name: Build
