--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,7 @@ jobs:
       - name: Cache node-gyp
         uses: actions/cache@v3
         with:
+          key: ${{matrix.os}}-${{ matrix.node }}
           path: |
             ~/.cache/node-gyp/
       - uses: actions/setup-node@v3
