--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,8 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           registry-url: https://registry.npmjs.org/
-          cache: 'npm'               
+          cache: 'npm'
+      - run: env            
       - name: Install dependencies
         run: npm ci
       - run: ls -lah ~/.cache
