--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     continue-on-error: true
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v3      
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          registry-url: https://registry.npmjs.org/
+          cache: 'npm'
+      - run: npm install -g env-paths
       - run: node scripts/get-node-gyp-cache-location.js
       - name: Determine node-gyp cache location
         run: export NODE_GYP_CACHE_LOCATION=$(node scripts/get-node-gyp-cache-location.js)
@@ -94,11 +100,6 @@ jobs:
           key: ${{ matrix.os }}-${{ matrix.node }}
           path: |
             ${{ env.NODE_GYP_CACHE_LOCATION }}
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          registry-url: https://registry.npmjs.org/
-          cache: 'npm'
       - run: env            
       - name: Install dependencies
         run: npm ci
