--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,23 +84,20 @@ jobs:
     runs-on: ${{ matrix.os }}
     continue-on-error: true
     steps:
-      - uses: actions/checkout@v3      
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          registry-url: https://registry.npmjs.org/
-          cache: 'npm'
-      - run: npm install -g env-paths
-      - run: |
-          echo "console.log(require('env-paths')('node-gyp', { suffix: '' }).cache)" | node -
-      - name: Determine node-gyp cache location
-        run: export NODE_GYP_CACHE_LOCATION=$(node scripts/get-node-gyp-cache-location.js)
+      - uses: actions/checkout@v3
       - name: Cache node-gyp
         uses: actions/cache@v3
         with:
           key: ${{ matrix.os }}-${{ matrix.node }}
           path: |
-            ${{ env.NODE_GYP_CACHE_LOCATION }}
+            ~/Library/node-gyp
+            ~/.cache/node-gyp
+            %LOCALAPPDATA%\node-gyp  
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          registry-url: https://registry.npmjs.org/
+          cache: 'npm'          
       - run: env            
       - name: Install dependencies
         run: npm ci
