--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,14 +85,28 @@ jobs:
     continue-on-error: true
     steps:
       - uses: actions/checkout@v3
-      - name: Cache node-gyp
+      
+      - name: Cache node-gyp linux
+        if: matrix.os == 'ubuntu-latest'
         uses: actions/cache@v3
         with:
           key: ${{ matrix.os }}-${{ matrix.node }}-node-gyp
-          path: |
-            /home/runner/Library/node-gyp
-            /Users/runner/.cache/node-gyp
-            C:\Users\runneradmin\AppData\Local\node-gyp
+          path: /home/runner/Library/node-gyp
+      
+      - name: Cache node-gyp windows
+        if: matrix.os == 'windows-latest'
+        uses: actions/cache@v3
+        with:
+          key: ${{ matrix.os }}-${{ matrix.node }}-node-gyp
+          path: C:\Users\runneradmin\AppData\Local\node-gyp
+            
+      - name: Cache node-gyp mac os
+        if: matrix.os == 'macos-latest'
+        uses: actions/cache@v3
+        with:
+          key: ${{ matrix.os }}-${{ matrix.node }}-node-gyp
+          path: /Users/runner/.cache/node-gyp
+
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
