--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
         uses: actions/cache@v3
         with:
           key: ${{ matrix.os }}-${{ matrix.node }}-node-gyp
-          path: /home/runner/node-gyp
+          path: /home/runner/.cache/node-gyp
       
       - name: Cache node-gyp windows
         if: matrix.os == 'windows-latest'
